--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 		<meta charset="utf-8">
 		<title>Brisbane Flood Diary</title>
 		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
-
-		<a href="map.html">
-			<img id="front" src="images/front.jpg" alt="Front page">;
-		</a>
-		<strong>Click the diary to start</strong>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 		<script src="js/script.js"></script>
+	</head>
+	<body>
+		<h1>Brisbane Flood Diary</h1>
+		<a href="map.html">
+			<img id="front" src="images/front.jpg" alt="Front page">
+		</a>
+		<strong>Click the diary to start</strong>
 	</body>
 </html>
