--- a/article.html
+++ b/article.html
@@ -21,7 +21,7 @@
 		<div class="row">
         	<div class ="column1">
 				<figure>
-					<img src="grass.jpg" alt="grass" width="100%" height="100%">
+					<img src="images/grass.jpg" alt="grass" width="100%" height="100%">
 					<figcaption>Figure: Grass </figcaption>
 				</figure>
 				<p>HI HELLO GOODBYE WHAT IS GOING ON IDK LOL TEST OUT THE LIMIT OK A BIT MORE RITO SURE</p>
