--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<h1>Brisbane Flood Diary</h1>
 		<a href="map.html">
-			<img id="front" src="images/front.jpg" alt="Front page">
+			<img id="front" src="images/front.jpg" alt="Front page" allign = "middle">
 		</a>
 		<strong>Click the diary to start</strong>
 	</body>
