--- a/map.html
+++ b/map.html
@@ -8,6 +8,8 @@
 		<script src="js/script.js"></script>
 	</head>
 	<body>
-        <p>hi</p>
+		<a href="article.html">
+			<img id="map" src="images/map.png" alt="map">
+		</a>
 	</body>
 </html>
