Added page buttons at bottom of article

--- a/article.html
+++ b/article.html
@@ -25,8 +25,15 @@
 					<figcaption>Figure: Grass </figcaption>
 				</figure>
 				<p>HI HELLO GOODBYE WHAT IS GOING ON IDK LOL TEST OUT THE LIMIT OK A BIT MORE RITO SURE</p>
+				<div class="button_prev">
+					<button type="button"> previous </button>
+				</div>
 			</div>
-			<div class ="column2"></div>
+			<div class ="column2">
+				<div class="button_next">
+					<button type="button"> next </button>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
