--- a/article.html
+++ b/article.html
@@ -17,16 +17,7 @@
 			<li><a href="quiz.html">Quiz</a></li>
 		</ul>
 
-		<!-- book pages aka columns-->
-		<div class="row">
-        	<div class ="column1">
-				<figure>
-					<img src="images/grass.jpg" alt="grass" width="100%" height="100%">
-					<figcaption>Figure: Grass </figcaption>
-				</figure>
-				<p>HI HELLO GOODBYE WHAT IS GOING ON IDK LOL TEST OUT THE LIMIT OK A BIT MORE RITO SURE</p>
-			</div>
-			<div class ="column2"></div>
-		</div>
+		<img id="bg" src="images/diary_bg.jpg" alt="bg">
+	
 	</body>
 </html>
