reverted diary bg

--- a/article.html
+++ b/article.html
@@ -17,9 +17,9 @@
 			<li><a href="quiz.html">Quiz</a></li>
 		</ul>
 
-		<img id="bg" src="images/diary_bg.jpg" alt="bg">
+		<!-- <img id="bg" src="images/diary_bg.jpg" alt="bg"> -->
 	
-		<!-- book pages aka columns
+		<!-- book pages aka columns -->
 		<div class="row">
         	<div class ="column1">
 				<figure>
@@ -27,6 +27,7 @@
 					<figcaption>Figure: Grass </figcaption>
 				</figure>
 				<p>HI HELLO GOODBYE WHAT IS GOING ON IDK LOL TEST OUT THE LIMIT OK A BIT MORE RITO SURE</p>
+
 				<div class="button_prev">
 					<button type="button"> previous </button>
 				</div>
@@ -36,6 +37,6 @@
 					<button type="button"> next </button>
 				</div>
 			</div>
-		</div> -->
+		</div>
 	</body>
 </html>
