--- a/article.html
+++ b/article.html
@@ -8,7 +8,6 @@
 		<script src="js/script.js"></script>
 	</head>
 	<body>
-
 		<!-- bookmarks -->
 		<ul>
 			<li><a href="map.html">Map</a></li>
@@ -18,15 +17,20 @@
 		</ul>
 
 		<!-- book pages aka columns-->
-		<div class="row">
-        	<div class ="column1">
-				<figure>
-					<img src="images/grass.jpg" alt="grass" width="100%" height="100%">
-					<figcaption>Figure: Grass </figcaption>
-				</figure>
-				<p>HI HELLO GOODBYE WHAT IS GOING ON IDK LOL TEST OUT THE LIMIT OK A BIT MORE RITO SURE</p>
+
+		<section id="book">
+			<img id="book-bg" src="images/diary.jpg">
+			<p>The quick brown fox jumped over the lazy dog.</p>
+			<div class="row">
+				<div class ="column1">
+					<figure>
+						<img src="images/grass.jpg" alt="grass" width="100%" height="100%">
+						<figcaption>Figure: Grass </figcaption>
+					</figure>
+					<p>HI HELLO GOODBYE WHAT IS GOING ON IDK LOL TEST OUT THE LIMIT OK A BIT MORE RITO SURE</p>
+				</div>
+				<div class ="column2"></div>
 			</div>
-			<div class ="column2"></div>
-		</div>
+		</section>
 	</body>
 </html>
