Renamed classes in article.html

--- a/article.html
+++ b/article.html
@@ -21,8 +21,8 @@
 		<!-- book pages aka columns -->
 		<section id="book">
 			<img id="book-bg" src="images/diary_bg.jpg">
-			<div class="row">
-				<div class ="column1">
+			<div class="pages">
+				<div class="leftpage">
 					<figure>
 						<img src="images/grass.jpg" alt="grass" width="100%" height="100%">
 						<figcaption>Figure: Grass </figcaption>
@@ -33,7 +33,7 @@
 						<button type="button"> previous </button>
 					</div>
 				</div>
-				<div class ="column2">
+				<div class ="rightpage">
 					<div class="button_next">
 						<button type="button"> next </button>
 					</div>
