--- a/article.html
+++ b/article.html
@@ -9,36 +9,35 @@
 	</head>
 	<body>
 		<!-- bookmarks -->
-		<ul>
-			<li><a href="map.html">Map</a></li>
-			<li><a href="article.html">Article</a></li>
-			<li><a href="article.html">Article</a></li>
-			<li><a href="quiz.html">Quiz</a></li>
-		</ul>
+		<nav>
+			<ul>
+				<li><a href="map.html">Map</a></li>
+				<li><a href="article.html">Article</a></li>
+				<li><a href="article.html">Article</a></li>
+				<li><a href="quiz.html">Quiz</a></li>
+			</ul>
+		</nav>
 
 		<!-- <img id="bg" src="images/diary_bg.jpg" alt="bg"> -->
 	
 		<!-- book pages aka columns -->
 		<section id="book">
 			<img id="book-bg" src="images/diary_bg.jpg">
-			<div class="pages">
-				<div class="leftpage">
+			<div id="pages">
+				<div id="leftpage">
 					<figure>
 						<img src="images/grass.jpg" alt="grass" width="100%" height="100%">
 						<figcaption>Figure: Grass </figcaption>
 					</figure>
 					<p>HI HELLO GOODBYE WHAT IS GOING ON IDK LOL TEST OUT THE LIMIT OK A BIT MORE RITO SURE</p>
-
-					<div class="button_prev">
-						<button type="button"> previous </button>
-					</div>
+					<button id="button-prev"> previous </button>
 				</div>
-				<div class ="rightpage">
-					<div class="button_next">
-						<button type="button"> next </button>
-					</div>
+				<div id="rightpage">
+					<button id="button-next"> next </button>
 				</div>
 			</div>
 		</section>
+
+		<footer></footer>
 	</body>
 </html>
