--- a/article.html
+++ b/article.html
@@ -21,6 +21,7 @@
 		<!-- <img id="bg" src="images/diary_bg.jpg" alt="bg"> -->
 	
 		<!-- book pages aka columns -->
+		<div id="book-container">
 		<section id="book">
 			<img id="book-bg" src="images/diary_bg.jpg">
 			<div id="pages">
@@ -37,7 +38,10 @@
 				</div>
 			</div>
 		</section>
+		</div>
 
-		<footer></footer>
+		<footer>
+			<p>Footer: DECO1800 - Interactive Design</p>
+		</footer>
 	</body>
 </html>
