Index and Map formating
Centred the title on Index Page
Added a picture of a diary to Index Page
Sized up map to fit the window

--- a/map.html
+++ b/map.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<a href="article.html">
-			<img id="map" src="images/map.png" alt="map">
+			<img id="map" src="images/map.png" alt="Map of Brisbane">
 		</a>
 	</body>
 </html>
