Game bg and exit button
Set game bg and created an exit button

--- a/game.html
+++ b/game.html
@@ -5,8 +5,14 @@
 		<title>Brisbane Flood Diary: Game</title>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-		<script src="js/script.js"></script>
+		<script src="js/game.js"></script>
 	</head>
 	<body>
+		<section>
+			<!-- background image-->
+			<img id = "game_background" src="images/grass.jpg" alt="game_background">
+
+			<button type="button"  id =exit_button onclick="exitGame()">exit</button>
+		</section>
 	</body>
 </html>
