--- a/game.html
+++ b/game.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Brisbane Flood Diary: Game</title>
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/game.css">
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 		<script src="js/game.js"></script>
 	</head>
 	<body>
 		<section>
 			<!-- background image-->
-			<img id = "game_background" src="images/grass.jpg" alt="game_background">
+			<div id="game_bg"></div>
 
 			<button type="button"  id =exit_button onclick="exitGame()">exit</button>
 		</section>
