Added temp images to test game
Images will be replaced with better ones later

--- a/game.html
+++ b/game.html
@@ -13,6 +13,11 @@
 			<div id="game_bg"></div>
 
 			<button type="button"  id =exit_button onclick="exitGame()">exit</button>
+
+			<div id = "images">
+				<img id="box" src="images/box.png">
+				<img id="sandbag" src="images/bag.jpeg">
+			</div>
 		</section>
 	</body>
 </html>
