Created continue forward box
Created a box which displays when game is done
Changes to yellow when hovered
Links back to article

--- a/game.html
+++ b/game.html
@@ -15,6 +15,11 @@
 			<button type="button"  id =exit_button onclick="exitGame()">exit</button>
 
 			<div id = "images">
+				<a href ="article.html">
+					<div id = "cont">
+						<strong id = "cont_text"> Continue</strong>
+					</div>
+			</a>
 				<div id = "box" ondragover="showDrop(event)" 
 					ondrop="drop(event)"> </div>
 				<img id="sandbag" src="images/bag.jpeg" draggable="true"
