Added Pages to quiz file
Copied page code and added it to the quiz file

--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,29 @@
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 		<script src="js/script.js"></script>
 	</head>
-	<body>
+	<body>	
+
+		<nav>
+			<ul>
+				<li><a href="map.html">Map</a></li>
+				<li><a href="article.html">Article</a></li>
+				<li><a href="article.html">Article</a></li>
+				<li><a href="quiz.html">Quiz</a></li>
+			</ul>
+		</nav>
+		<!-- book pages aka columns -->
+		<div id="book-container">
+			<section id="book">
+				<img id="book-bg" src="images/diary_bg.jpg">
+				<div id="pages">
+					<div id="leftpage">
+						<button id="button-prev"> previous </button>
+					</div>
+					<div id="rightpage">
+						<button id="button-next"> next </button>
+					</div>
+				</div>
+			</section>
+			</div>
 	</body>
 </html>
