Added box to link to game
Added a box in the article page to link to the game
Also included a new article.css file

--- a/article.html
+++ b/article.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Brisbane Flood Diary: Article</title>
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/article.css">
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 		<script src="js/script.js"></script>
 	</head>
@@ -34,6 +35,11 @@
 					<button id="button-prev"> previous </button>
 				</div>
 				<div id="rightpage">
+					<a href="game.html">
+					<div id="access_game">
+						<p id="access_game_text"> Click here to play</p>
+					</div>
+				</a>
 					<button id="button-next"> next </button>
 				</div>
 			</div>
