Added Exit button to certificate
Added an exit button to the index page
Created cert.jss and cert.css

--- a/certificate.html
+++ b/certificate.html
@@ -4,10 +4,12 @@
 		<meta charset="utf-8">
 		<title>Brisbane Flood Diary: Certificate</title>
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/cert.css">
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-		<script src="js/script.js"></script>
+		<script src="js/cert.js"></script>
 	</head>
 	<body>
+		<button type="button"  id =exit_button onclick="exitCert()">exit</button>
         <img id="cert" src="images/certificate.png" alt="certificate">
 	</body>
 </html>
