Added more css and js files
Added more css and js files for each page
Shifted uncommon css code to their individual file
Renamed article.html to article_p1.html and created a new article_p2.html
Copied the pages into article_p2

--- a/article_p1.html
+++ b/article_p1.html
@@ -2,19 +2,19 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Brisbane Flood Diary: Article</title>
+		<title>Brisbane Flood Diary: Article-Part 1</title>
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/article.css">
+		<link rel="stylesheet" href="css/articleP1.css">
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-		<script src="js/script.js"></script>
+		<script src="js/articleP1.js"></script>
 	</head>
 	<body>
 		<!-- bookmarks -->
 		<nav>
 			<ul>
 				<li><a href="map.html">Map</a></li>
-				<li><a href="article.html">Article</a></li>
-				<li><a href="article.html">Article</a></li>
+				<li><a href="article_p1.html">Article</a></li>
+				<li><a href="article_p1.html">Article</a></li>
 				<li><a href="quiz.html">Quiz</a></li>
 			</ul>
 		</nav>
