--- a/article_p2.html
+++ b/article_p2.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<title>Brisbane Flood Diary: Quiz</title>
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/quiz.css">
+        <link rel="stylesheet" href="css/articleP2.css">
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-		<script src="js/quiz.js"></script>
+		<script src="js/articleP2.js"></script>
 	</head>
 	<body>	
 
