--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 		<meta charset="utf-8">
 		<title>Brisbane Flood Diary</title>
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/index.css">
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-		<script src="js/script.js"></script>
+		<script src="js/index.js"></script>
 	</head>
 	<body>
 		<h1>Brisbane Flood Diary</h1>
 		<a href="map.html">
-			<img id="front" src="images/diary_front.jpeg" alt="Front page" allign = "middle">
+			<img id="front_diary" src="images/diary_front.jpeg" alt="Front page" allign = "middle">
 		</a>
-		<strong>Click the diary to start</strong>
+		<strong id="front_text">Click the diary to start</strong>
 	</body>
 </html>
