--- a/map.html
+++ b/map.html
@@ -4,11 +4,12 @@
 		<meta charset="utf-8">
 		<title>Brisbane Flood Diary: Map</title>
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/map.css">
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-		<script src="js/script.js"></script>
+		<script src="js/map.js"></script>
 	</head>
 	<body>
-		<a href="article.html">
+		<a href="article_p1.html">
 			<img id="map" src="images/map.png" alt="Map of Brisbane">
 		</a>
 	</body>
