--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
 			<button type="button"  id =exit_button onclick="exitGame()">exit</button>
 
 			<div id = "images">
-				<a href ="article.html">
+				<a href ="article_p2.html">
 					<div id = "cont">
 						<strong id = "cont_text"> Continue</strong>
 					</div>
