Page buttons functional
Page buttons now link to their respective pages

--- a/article_p1.html
+++ b/article_p1.html
@@ -32,7 +32,7 @@
 						<figcaption>Figure: Grass </figcaption>
 					</figure>
 					<p>HI HELLO GOODBYE WHAT IS GOING ON IDK LOL TEST OUT THE LIMIT OK A BIT MORE RITO SURE</p>
-					<button id="button-prev"> previous </button>
+					<button id="button-prev" onclick="prevPage()"> previous </button>
 				</div>
 				<div id="rightpage">
 					<a href="game.html">
@@ -40,7 +40,7 @@
 						<p id="access_game_text"> Click here to play</p>
 					</div>
 				</a>
-					<button id="button-next"> next </button>
+					<button id="button-next" onclick="nextPage()"> next </button>
 				</div>
 			</div>
 		</section>
