--- a/quiz.html
+++ b/quiz.html
@@ -24,10 +24,9 @@
 				<img id="book-bg" src="images/diary_bg.jpg">
 				<div id="pages">
 					<div id="leftpage">
-						<button id="button-prev"> previous </button>
+						<button id="button-prev" onclick="prevPage()"> previous </button>
 					</div>
 					<div id="rightpage">
-						<button id="button-next"> next </button>
 					</div>
 				</div>
 			</section>
