--- a/map.html
+++ b/map.html
@@ -9,8 +9,31 @@
 		<script src="js/map.js"></script>
 	</head>
 	<body>
-		<a href="article_p1.html">
-			<img id="map" src="images/map.png" alt="Map of Brisbane">
-		</a>
+		<nav>
+			<ul>
+				<li><a href="map.html">Map</a></li>
+				<li><a href="article_p1.html">Article</a></li>
+				<li><a href="article_p1.html">Article</a></li>
+				<li><a href="quiz.html">Quiz</a></li>
+			</ul>
+		</nav>
+
+		<!-- <img id="bg" src="images/diary_bg.jpg" alt="bg"> -->
+	
+		<!-- book pages aka columns -->
+		<div id="book-container">
+			<section id="book">
+				<img id="book-bg" src="images/diary_bg.jpg">
+				<div id="pages">
+					<div id="pagespread">
+						<a href="article_p1.html"><img id="map" src="images/nav-map.jpg" alt="Map of Brisbane"></a>
+					</div>
+				</div>
+			</section>
+		</div>
+
+		<footer>
+			<p>Footer: DECO1800 - Interactive Design</p>
+		</footer>
 	</body>
 </html>
