added submit quiz button

--- a/quiz.html
+++ b/quiz.html
@@ -22,7 +22,9 @@
 		<div id="book-container">
 			<section id="book">
 				<img id="book-bg" src="images/diary_bg.jpg">
-				<div id="pages">
+				<div id="quiz"></div>
+				<button id="submit">Submit Quiz</button>
+				<div id="results"></div>
 					<div id="leftpage">
 						<button id="button-prev" onclick="prevPage()"> previous </button>
 					</div>
