Article_p2 small updates
Filled in some details in article_p2
Set font size for book to be 19px

--- a/article_p2.html
+++ b/article_p2.html
@@ -24,9 +24,21 @@
 				<img id="book-bg" src="images/diary_bg.jpg">
 				<div id="pages">
 					<div id="leftpage">
+						<img src="images/aaron2.jpeg" width = 80% height = 40%>
+						<p id=congrats> Yay! You did it</p>
+						<article>
+							Aaron and his family successfully protected his home from the flood with your 
+							help by placing sandbags in front of vulnerable locations.
+						</article>
 						<button id="button-prev" onclick="prevPage()"> previous </button>
 					</div>
 					<div id="rightpage">
+						<article>To find out more informations on how to prepare for a flood be sure to
+							the Queensland Government Website below:
+						</article>
+						<a href="https://www.disaster.qld.gov.au/dmp/sandbagging/Pages/default.aspx">
+							<p>https://www.disaster.qld.gov.au/dmp/sandbagging/Pages/default.aspx</p>
+						</a>
 						<button id="button-next" onclick="nextPage()"> next </button>
 					</div>
 				</div>
