--- a/article_p1.html
+++ b/article_p1.html
@@ -27,14 +27,24 @@
 				<img id="book-bg" src="images/diary_bg.jpg">
 				<div id="pages">
 					<div id="leftpage">
+						<h1>Chapter: Chelmer Part I</h1>
 						<figure>
 							<img src="images/grass.jpg" alt="grass" width="100%" height="100%">
 							<figcaption>Figure: Grass </figcaption>
 						</figure>
-						<p>HI HELLO GOODBYE WHAT IS GOING ON IDK LOL TEST OUT THE LIMIT OK A BIT MORE RITO SURE</p>
+						<article>
+						On the night of the 12th of January, the suburb of Chelmer is getting ready for a devastating flood.<br><br>
+						This is where we meet Aaron and his family. They'll be staying up all night sandbagging their home.<br><br>
+						And they sure could use some help right now.
+						</article>
 						<button id="button-prev" onclick="prevPage()"> previous </button>
 					</div>
 					<div id="rightpage">
+						<figure id="aaron">
+							<img src="images/aaron1.jpeg" alt="Aaron and co" width="80%" height="60%">
+							<figcaption>Figure: Aaron and his family</figcaption>
+						</figure>
+						<p>Click on the box below to help them out.</p>
 						<a href="game.html">
 						<div id="access_game">
 							<p id="access_game_text"> Click here to play</p>
