--- a/game.html
+++ b/game.html
@@ -20,14 +20,14 @@
 						<strong id = "cont_text"> Continue</strong>
 					</div>
 				</a>
-				<img id="dog_girl" src="images/dog_girl.jpg" draggable="true">
+<!-- 				<img id="dog_girl" src="images/dog_girl.jpg" draggable="true">
 				<img id="bernie" src="images/bernie.png" draggable="true">
-				<img id="fruits" src="images/fruits.png" draggable="true">
+				<img id="fruits" src="images/fruits.png" draggable="true"> -->
 
 				<div id = "box" ondragover="showDrop(event)" 
 					ondrop="drop(event)"> 
 				<p>Place Sandbag inside</p></div>
-					<img id="among_us" src="images/among_us.png" draggable="true">
+					<!-- <img id="among_us" src="images/among_us.png" draggable="true"> -->
 				<img id="sandbag" src="images/sandbag.png" draggable="true"
 					 ondragstart="dragStart(event)">
 			</div>
