Added bernie back woohoo

--- a/game.html
+++ b/game.html
@@ -20,9 +20,9 @@
 						<strong id = "cont_text"> Continue</strong>
 					</div>
 				</a>
-<!-- 				<img id="dog_girl" src="images/dog_girl.jpg" draggable="true">
+<!-- 				<img id="dog_girl" src="images/dog_girl.jpg" draggable="true"> -->
 				<img id="bernie" src="images/bernie.png" draggable="true">
-				<img id="fruits" src="images/fruits.png" draggable="true"> -->
+				<!-- <img id="fruits" src="images/fruits.png" draggable="true"> -->
 
 				<div id = "box" ondragover="showDrop(event)" 
 					ondrop="drop(event)"> 
