--- a/article_p1.html
+++ b/article_p1.html
@@ -29,8 +29,8 @@
 					<div id="leftpage">
 						<h1>Chapter: Chelmer Part I</h1>
 						<figure>
-							<img src="images/grass.jpg" alt="grass" width="100%" height="100%">
-							<figcaption>Figure: Grass </figcaption>
+							<img src="images/chelmer.jpg" alt="chelmer" width="50%" height="50%">
+							<figcaption>Figure: Chelmer, January 2011 </figcaption>
 						</figure>
 						<article>
 						On the night of the 12th of January, the suburb of Chelmer is getting ready for a devastating flood.<br><br>
