Fixed the sandbagging game's background image

--- a/game.html
+++ b/game.html
@@ -10,9 +10,10 @@
 	<body>
 		<section>
 			<!-- background image-->
-			<div id="game_bg"></div>
+			<img id="game_bg" src="images/grass.jpg">
 
-			<button type="button"  id =exit_button onclick="exitGame()">exit</button>
+
+			<button type="button" id =exit_button onclick="exitGame()">exit</button>
 
 			<div id = "images">
 				<a href ="article_p2.html">
@@ -31,6 +32,7 @@
 				<img id="sandbag" src="images/sandbag.png" draggable="true"
 					 ondragstart="dragStart(event)">
 			</div>
+			
 		</section>
 	</body>
 </html>
